--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 ENV = 'production'
 
 # base api  /dev-api  http://192.168.0.106:9527/
-VUE_APP_BASE_API = '/dev-api'
+VUE_APP_BASE_API = 'host:port/'
