--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "quill": "^1.3.7",
+    "save": "^2.5.0",
     "screenfull": "4.2.0",
     "script-loader": "0.7.2",
     "sortablejs": "1.8.4",
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
+    "vue-amap": "^0.5.10",
     "vue-count-to": "1.0.13",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.2",
