--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
     "vue-amap": "^0.5.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-count-to": "1.0.13",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "3.0.2",
