--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,5 @@
 ENV = 'production'
 
 # base api  /dev-api  http://192.168.0.106:9527/
-VUE_APP_BASE_API = 'host:port/'
+VUE_APP_BASE_API = 'https://mobile-ms.uat.homecreditcfc.cn/mock/633261554fab890028c58115/yijiequan/'
+
