密码登录方式接口对接

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # just a flag
 ENV = 'production'
 
-# base api  /dev-api  http://192.168.0.106:9527/
-VUE_APP_BASE_API = 'https://mobile-ms.uat.homecreditcfc.cn/mock/633261554fab890028c58115/yijiequan/'
+# base api  /dev-api  http://192.168.0.106:9527/ 
+VUE_APP_BASE_API = 'http://seller-api.yijiequan.cn'
 
