--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@
 ENV = 'development'
 
 # base api  /dev-api    http://192.168.0.106:9527/
-VUE_APP_BASE_API = ''
+VUE_APP_BASE_API = 'http://seller-api.yijiequan.cn'
